--- a/modules/insurance_product/locale/fr_FR.po
+++ b/modules/insurance_product/locale/fr_FR.po
@@ -1834,39 +1834,39 @@ msgctxt "field:ins_product.letter_version,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:ins_product.loss-document-relation,create_date:"
+msgctxt "field:benefit.loss.description-document.description,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:ins_product.loss-document-relation,create_date_:"
+msgctxt "field:benefit.loss.description-document.description,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:ins_product.loss-document-relation,create_uid:"
+msgctxt "field:benefit.loss.description-document.description,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:ins_product.loss-document-relation,document:"
+msgctxt "field:benefit.loss.description-document.description,document:"
 msgid "Document"
 msgstr "Document"
 
-msgctxt "field:ins_product.loss-document-relation,id:"
+msgctxt "field:benefit.loss.description-document.description,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:ins_product.loss-document-relation,loss:"
+msgctxt "field:benefit.loss.description-document.description,loss:"
 msgid "Loss"
 msgstr "Préjudice"
 
-msgctxt "field:ins_product.loss-document-relation,rec_name:"
+msgctxt "field:benefit.loss.description-document.description,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.loss-document-relation,write_date:"
+msgctxt "field:benefit.loss.description-document.description,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:ins_product.loss-document-relation,write_uid:"
+msgctxt "field:benefit.loss.description-document.description,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -3393,7 +3393,7 @@ msgctxt "model:ins_product.letter_version,name:"
 msgid "Letter Version"
 msgstr "Version de Lettre"
 
-msgctxt "model:ins_product.loss-document-relation,name:"
+msgctxt "model:benefit.loss.description-document.description,name:"
 msgid "Loss Desc to Document relation"
 msgstr "Relation Descripteur de Préjudice Document"
 
