--- a/modules/insurance_product/locale/fr_FR.po
+++ b/modules/insurance_product/locale/fr_FR.po
@@ -10,7 +10,7 @@ msgctxt "error:benefit:"
 msgid "The code must be unique!"
 msgstr "Le code doit être unique"
 
-msgctxt "error:ins_product.benefit_rule:"
+msgctxt "error:benefit.rule:"
 msgid "You can not have 2 business rules that overlaps!"
 msgstr "2 règles se chevauchent!"
 
@@ -340,148 +340,148 @@ msgctxt "field:benefit-loss.description,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:ins_product.benefit_rule,amount:"
+msgctxt "field:benefit.rule,amount:"
 msgid "Amount"
 msgstr "Montant"
 
-msgctxt "field:ins_product.benefit_rule,amount_evolves_over_time:"
+msgctxt "field:benefit.rule,amount_evolves_over_time:"
 msgid "Evolves Over Time"
 msgstr "Evolue au cours du temps"
 
-msgctxt "field:ins_product.benefit_rule,amount_kind:"
+msgctxt "field:benefit.rule,amount_kind:"
 msgid "Amount Kind"
 msgstr "Type de Montant"
 
-msgctxt "field:ins_product.benefit_rule,coef_coverage_amount:"
+msgctxt "field:benefit.rule,coef_coverage_amount:"
 msgid "Multiplier"
 msgstr "Coef. Multiplicateur"
 
-msgctxt "field:ins_product.benefit_rule,config_kind:"
+msgctxt "field:benefit.rule,config_kind:"
 msgid "Conf. kind"
 msgstr "Type de Conf."
 
-msgctxt "field:ins_product.benefit_rule,create_date:"
+msgctxt "field:benefit.rule,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:ins_product.benefit_rule,create_date_:"
+msgctxt "field:benefit.rule,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:ins_product.benefit_rule,create_uid:"
+msgctxt "field:benefit.rule,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:ins_product.benefit_rule,currency:"
+msgctxt "field:benefit.rule,currency:"
 msgid "Currency"
 msgstr "Devises"
 
-msgctxt "field:ins_product.benefit_rule,currency_digits:"
+msgctxt "field:benefit.rule,currency_digits:"
 msgid "Currency Digits"
 msgstr "Précision"
 
-msgctxt "field:ins_product.benefit_rule,currency_symbol:"
+msgctxt "field:benefit.rule,currency_symbol:"
 msgid "Currency Symbol"
 msgstr "Symbole de la Devise"
 
-msgctxt "field:ins_product.benefit_rule,end_date:"
+msgctxt "field:benefit.rule,end_date:"
 msgid "To Date"
 msgstr "Date de Fin"
 
-msgctxt "field:ins_product.benefit_rule,id:"
+msgctxt "field:benefit.rule,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:ins_product.benefit_rule,indemnification_calc_unit:"
+msgctxt "field:benefit.rule,indemnification_calc_unit:"
 msgid "Indemnification Calculation Unit"
 msgstr "Unité de calcul de l'indemnisation"
 
-msgctxt "field:ins_product.benefit_rule,index_initial_date:"
+msgctxt "field:benefit.rule,index_initial_date:"
 msgid "Index Initial Date"
 msgstr "Date de l'Indice de Référence"
 
-msgctxt "field:ins_product.benefit_rule,index_initial_value:"
+msgctxt "field:benefit.rule,index_initial_value:"
 msgid "Initial Value"
 msgstr "Valeur Initiale"
 
-msgctxt "field:ins_product.benefit_rule,max_duration_per_indemnification:"
+msgctxt "field:benefit.rule,max_duration_per_indemnification:"
 msgid "Max duration per Indemnification"
 msgstr "Durée max par Indemnisation"
 
 msgctxt ""
-"field:ins_product.benefit_rule,max_duration_per_indemnification_unit:"
+"field:benefit.rule,max_duration_per_indemnification_unit:"
 msgid "Unit"
 msgstr "Unité"
 
-msgctxt "field:ins_product.benefit_rule,must_expand_tree:"
+msgctxt "field:benefit.rule,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
-msgctxt "field:ins_product.benefit_rule,offered:"
+msgctxt "field:benefit.rule,offered:"
 msgid "Offered"
 msgstr "Offre"
 
-msgctxt "field:ins_product.benefit_rule,rec_name:"
+msgctxt "field:benefit.rule,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.benefit_rule,revaluation_date:"
+msgctxt "field:benefit.rule,revaluation_date:"
 msgid "Revaluation Date"
 msgstr "Date de Revalorisation"
 
-msgctxt "field:ins_product.benefit_rule,revaluation_index:"
+msgctxt "field:benefit.rule,revaluation_index:"
 msgid "Revaluation Index"
 msgstr "Indice de Revalorisation"
 
-msgctxt "field:ins_product.benefit_rule,rule:"
+msgctxt "field:benefit.rule,rule:"
 msgid "Rule Engine"
 msgstr "Moteur de Règle"
 
-msgctxt "field:ins_product.benefit_rule,rule_complementary_data:"
+msgctxt "field:benefit.rule,rule_complementary_data:"
 msgid "Rule Complementary Data"
 msgstr "Paramètres de Rêgle"
 
-msgctxt "field:ins_product.benefit_rule,start_date:"
+msgctxt "field:benefit.rule,start_date:"
 msgid "From Date"
 msgstr "Date de Début"
 
-msgctxt "field:ins_product.benefit_rule,sub_benefit_rules:"
+msgctxt "field:benefit.rule,sub_benefit_rules:"
 msgid "Sub Benefit Rules"
 msgstr "Sous Règles de Prestation"
 
-msgctxt "field:ins_product.benefit_rule,template:"
+msgctxt "field:benefit.rule,template:"
 msgid "Template"
 msgstr "Modèle"
 
-msgctxt "field:ins_product.benefit_rule,template_behaviour:"
+msgctxt "field:benefit.rule,template_behaviour:"
 msgid "Template Behaviour"
 msgstr "Comportement du Modèle"
 
-msgctxt "field:ins_product.benefit_rule,use_monthly_period:"
+msgctxt "field:benefit.rule,use_monthly_period:"
 msgid "Monthly Period"
 msgstr "Période Mensuelle"
 
-msgctxt "field:ins_product.benefit_rule,validation_delay:"
+msgctxt "field:benefit.rule,validation_delay:"
 msgid "Validation Delay"
 msgstr "Délai de Validation"
 
-msgctxt "field:ins_product.benefit_rule,validation_delay_unit:"
+msgctxt "field:benefit.rule,validation_delay_unit:"
 msgid "Delay"
 msgstr "Délai"
 
-msgctxt "field:ins_product.benefit_rule,view_rec_name:"
+msgctxt "field:benefit.rule,view_rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.benefit_rule,with_revaluation:"
+msgctxt "field:benefit.rule,with_revaluation:"
 msgid "With Revaluation"
 msgstr "Avec Revalorisation"
 
-msgctxt "field:ins_product.benefit_rule,write_date:"
+msgctxt "field:benefit.rule,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:ins_product.benefit_rule,write_uid:"
+msgctxt "field:benefit.rule,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -3244,11 +3244,11 @@ msgctxt "field:table.dimension_displayer,complementary_data:"
 msgid "Complementary Data"
 msgstr "Données Complémentaires"
 
-msgctxt "help:ins_product.benefit_rule,coef_coverage_amount:"
+msgctxt "help:benefit.rule,coef_coverage_amount:"
 msgid "Add a multiplier to apply to the coverage amount"
 msgstr "Ajouter un coefficient multiplicateur au montant de couverture"
 
-msgctxt "help:ins_product.benefit_rule,use_monthly_period:"
+msgctxt "help:benefit.rule,use_monthly_period:"
 msgid "Split periods at the end of the month"
 msgstr "Découper les périodes à la fin du mois"
 
@@ -3280,7 +3280,7 @@ msgctxt "model:benefit-loss.description,name:"
 msgid "Benefit Loss Desc Relation"
 msgstr "Relation Prestation Descripteur de Préjudice"
 
-msgctxt "model:ins_product.benefit_rule,name:"
+msgctxt "model:benefit.rule,name:"
 msgid "Benefit Rule"
 msgstr "Prestation"
 
@@ -3621,134 +3621,134 @@ msgctxt "selection:benefit,template_behaviour:"
 msgid "Remove"
 msgstr "Remplacer"
 
-msgctxt "selection:ins_product.benefit_rule,amount_kind:"
+msgctxt "selection:benefit.rule,amount_kind:"
 msgid "Amount"
 msgstr "Montant"
 
-msgctxt "selection:ins_product.benefit_rule,amount_kind:"
+msgctxt "selection:benefit.rule,amount_kind:"
 msgid "Coverage Amount"
 msgstr "Montant de Couverture"
 
-msgctxt "selection:ins_product.benefit_rule,config_kind:"
+msgctxt "selection:benefit.rule,config_kind:"
 msgid "Advanced"
 msgstr "Avancé"
 
-msgctxt "selection:ins_product.benefit_rule,config_kind:"
+msgctxt "selection:benefit.rule,config_kind:"
 msgid "Simple"
 msgstr "Simple"
 
-msgctxt "selection:ins_product.benefit_rule,indemnification_calc_unit:"
+msgctxt "selection:benefit.rule,indemnification_calc_unit:"
 msgid ""
 msgstr " "
 
-msgctxt "selection:ins_product.benefit_rule,indemnification_calc_unit:"
+msgctxt "selection:benefit.rule,indemnification_calc_unit:"
 msgid "Day"
 msgstr "Jour"
 
-msgctxt "selection:ins_product.benefit_rule,indemnification_calc_unit:"
+msgctxt "selection:benefit.rule,indemnification_calc_unit:"
 msgid "Half-year"
 msgstr "Semestre"
 
-msgctxt "selection:ins_product.benefit_rule,indemnification_calc_unit:"
+msgctxt "selection:benefit.rule,indemnification_calc_unit:"
 msgid "Month"
 msgstr "Mois"
 
-msgctxt "selection:ins_product.benefit_rule,indemnification_calc_unit:"
+msgctxt "selection:benefit.rule,indemnification_calc_unit:"
 msgid "Quarter"
 msgstr "Trimestre"
 
-msgctxt "selection:ins_product.benefit_rule,indemnification_calc_unit:"
+msgctxt "selection:benefit.rule,indemnification_calc_unit:"
 msgid "Week"
 msgstr "Semaine"
 
-msgctxt "selection:ins_product.benefit_rule,indemnification_calc_unit:"
+msgctxt "selection:benefit.rule,indemnification_calc_unit:"
 msgid "Year"
 msgstr "Année"
 
 msgctxt ""
-"selection:ins_product.benefit_rule,max_duration_per_indemnification_unit:"
+"selection:benefit.rule,max_duration_per_indemnification_unit:"
 msgid ""
 msgstr " "
 
 msgctxt ""
-"selection:ins_product.benefit_rule,max_duration_per_indemnification_unit:"
+"selection:benefit.rule,max_duration_per_indemnification_unit:"
 msgid "Day"
 msgstr "Jour"
 
 msgctxt ""
-"selection:ins_product.benefit_rule,max_duration_per_indemnification_unit:"
+"selection:benefit.rule,max_duration_per_indemnification_unit:"
 msgid "Half-year"
 msgstr "Semestre"
 
 msgctxt ""
-"selection:ins_product.benefit_rule,max_duration_per_indemnification_unit:"
+"selection:benefit.rule,max_duration_per_indemnification_unit:"
 msgid "Month"
 msgstr "Mois"
 
 msgctxt ""
-"selection:ins_product.benefit_rule,max_duration_per_indemnification_unit:"
+"selection:benefit.rule,max_duration_per_indemnification_unit:"
 msgid "Quarter"
 msgstr "Trimestre"
 
 msgctxt ""
-"selection:ins_product.benefit_rule,max_duration_per_indemnification_unit:"
+"selection:benefit.rule,max_duration_per_indemnification_unit:"
 msgid "Week"
 msgstr "Semaine"
 
 msgctxt ""
-"selection:ins_product.benefit_rule,max_duration_per_indemnification_unit:"
+"selection:benefit.rule,max_duration_per_indemnification_unit:"
 msgid "Year"
 msgstr "Année"
 
-msgctxt "selection:ins_product.benefit_rule,offered:"
+msgctxt "selection:benefit.rule,offered:"
 msgid "Benefit"
 msgstr "Prestation"
 
-msgctxt "selection:ins_product.benefit_rule,offered:"
+msgctxt "selection:benefit.rule,offered:"
 msgid "Coverage"
 msgstr "Garantie"
 
-msgctxt "selection:ins_product.benefit_rule,offered:"
+msgctxt "selection:benefit.rule,offered:"
 msgid "Product"
 msgstr "Produit"
 
-msgctxt "selection:ins_product.benefit_rule,template_behaviour:"
+msgctxt "selection:benefit.rule,template_behaviour:"
 msgid ""
 msgstr " "
 
-msgctxt "selection:ins_product.benefit_rule,template_behaviour:"
+msgctxt "selection:benefit.rule,template_behaviour:"
 msgid "Add"
 msgstr "Compléter"
 
-msgctxt "selection:ins_product.benefit_rule,template_behaviour:"
+msgctxt "selection:benefit.rule,template_behaviour:"
 msgid "Remove"
 msgstr "Remplacer"
 
-msgctxt "selection:ins_product.benefit_rule,validation_delay_unit:"
+msgctxt "selection:benefit.rule,validation_delay_unit:"
 msgid ""
 msgstr " "
 
-msgctxt "selection:ins_product.benefit_rule,validation_delay_unit:"
+msgctxt "selection:benefit.rule,validation_delay_unit:"
 msgid "Day"
 msgstr "Jour"
 
-msgctxt "selection:ins_product.benefit_rule,validation_delay_unit:"
+msgctxt "selection:benefit.rule,validation_delay_unit:"
 msgid "Half-year"
 msgstr "Semestre"
 
-msgctxt "selection:ins_product.benefit_rule,validation_delay_unit:"
+msgctxt "selection:benefit.rule,validation_delay_unit:"
 msgid "Month"
 msgstr "Mois"
 
-msgctxt "selection:ins_product.benefit_rule,validation_delay_unit:"
+msgctxt "selection:benefit.rule,validation_delay_unit:"
 msgid "Quarter"
 msgstr "Trimestre"
 
-msgctxt "selection:ins_product.benefit_rule,validation_delay_unit:"
+msgctxt "selection:benefit.rule,validation_delay_unit:"
 msgid "Week"
 msgstr "Semaine"
 
-msgctxt "selection:ins_product.benefit_rule,validation_delay_unit:"
+msgctxt "selection:benefit.rule,validation_delay_unit:"
 msgid "Year"
 msgstr "Année"
 
@@ -4540,11 +4540,11 @@ msgctxt "view:benefit:"
 msgid "Reserve"
 msgstr "Provision"
 
-msgctxt "view:ins_product.benefit_rule:"
+msgctxt "view:benefit.rule:"
 msgid "%"
 msgstr "%"
 
-msgctxt "view:ins_product.benefit_rule:"
+msgctxt "view:benefit.rule:"
 msgid "benefit rule"
 msgstr "Règle de Prestation"
 
