--- a/modules/insurance_product/locale/fr_FR.po
+++ b/modules/insurance_product/locale/fr_FR.po
@@ -18,7 +18,7 @@ msgctxt "error:offered.business_rule_root:"
 msgid "You can not have 2 business rules that overlaps!"
 msgstr "2 règles se chevauchent!"
 
-msgctxt "error:ins_product.clause_rule:"
+msgctxt "error:clause.rule:"
 msgid "You can not have 2 business rules that overlaps!"
 msgstr "2 règles se chevauchent!"
 
@@ -629,79 +629,79 @@ msgctxt "field:clause.rule-clause,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:ins_product.clause_rule,config_kind:"
+msgctxt "field:clause.rule,config_kind:"
 msgid "Conf. kind"
 msgstr "Type de Conf."
 
-msgctxt "field:ins_product.clause_rule,create_date:"
+msgctxt "field:clause.rule,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:ins_product.clause_rule,create_date_:"
+msgctxt "field:clause.rule,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:ins_product.clause_rule,create_uid:"
+msgctxt "field:clause.rule,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:ins_product.clause_rule,end_date:"
+msgctxt "field:clause.rule,end_date:"
 msgid "To Date"
 msgstr "Date de Fin"
 
-msgctxt "field:ins_product.clause_rule,id:"
+msgctxt "field:clause.rule,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:ins_product.clause_rule,must_expand_tree:"
+msgctxt "field:clause.rule,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
-msgctxt "field:ins_product.clause_rule,offered:"
+msgctxt "field:clause.rule,offered:"
 msgid "Offered"
 msgstr "Offre"
 
-msgctxt "field:ins_product.clause_rule,rec_name:"
+msgctxt "field:clause.rule,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.clause_rule,rule:"
+msgctxt "field:clause.rule,rule:"
 msgid "Rule Engine"
 msgstr "Moteur de Règle"
 
-msgctxt "field:ins_product.clause_rule,rule_complementary_data:"
+msgctxt "field:clause.rule,rule_complementary_data:"
 msgid "Rule Complementary Data"
 msgstr "Paramètres de Rêgle"
 
-msgctxt "field:ins_product.clause_rule,shared_clauses:"
+msgctxt "field:clause.rule,shared_clauses:"
 msgid "Shared Clauses"
 msgstr "Clauses Partagées"
 
-msgctxt "field:ins_product.clause_rule,specific_clauses:"
+msgctxt "field:clause.rule,specific_clauses:"
 msgid "Specific Clauses"
 msgstr "Clauses Spécifiques"
 
-msgctxt "field:ins_product.clause_rule,start_date:"
+msgctxt "field:clause.rule,start_date:"
 msgid "From Date"
 msgstr "Date de Début"
 
-msgctxt "field:ins_product.clause_rule,template:"
+msgctxt "field:clause.rule,template:"
 msgid "Template"
 msgstr "Modèle"
 
-msgctxt "field:ins_product.clause_rule,template_behaviour:"
+msgctxt "field:clause.rule,template_behaviour:"
 msgid "Template Behaviour"
 msgstr "Comportement du Modèle"
 
-msgctxt "field:ins_product.clause_rule,view_rec_name:"
+msgctxt "field:clause.rule,view_rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.clause_rule,write_date:"
+msgctxt "field:clause.rule,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:ins_product.clause_rule,write_uid:"
+msgctxt "field:clause.rule,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -3296,7 +3296,7 @@ msgctxt "model:clause.rule-clause,name:"
 msgid "Relation between clause and offered"
 msgstr "Table intermédiaire entre l'offre et le clause"
 
-msgctxt "model:ins_product.clause_rule,name:"
+msgctxt "model:clause.rule,name:"
 msgid "Clause Rule"
 msgstr "Clause"
 
@@ -3784,35 +3784,35 @@ msgctxt "selection:offered.business_rule_root,template_behaviour:"
 msgid "Remove"
 msgstr "Remplacer"
 
-msgctxt "selection:ins_product.clause_rule,config_kind:"
+msgctxt "selection:clause.rule,config_kind:"
 msgid "Advanced"
 msgstr "Avancé"
 
-msgctxt "selection:ins_product.clause_rule,config_kind:"
+msgctxt "selection:clause.rule,config_kind:"
 msgid "Simple"
 msgstr "Simple"
 
-msgctxt "selection:ins_product.clause_rule,offered:"
+msgctxt "selection:clause.rule,offered:"
 msgid "Benefit"
 msgstr "Prestation"
 
-msgctxt "selection:ins_product.clause_rule,offered:"
+msgctxt "selection:clause.rule,offered:"
 msgid "Coverage"
 msgstr "Garantie"
 
-msgctxt "selection:ins_product.clause_rule,offered:"
+msgctxt "selection:clause.rule,offered:"
 msgid "Product"
 msgstr "Produit"
 
-msgctxt "selection:ins_product.clause_rule,template_behaviour:"
+msgctxt "selection:clause.rule,template_behaviour:"
 msgid ""
 msgstr " "
 
-msgctxt "selection:ins_product.clause_rule,template_behaviour:"
+msgctxt "selection:clause.rule,template_behaviour:"
 msgid "Add"
 msgstr "Compléter"
 
-msgctxt "selection:ins_product.clause_rule,template_behaviour:"
+msgctxt "selection:clause.rule,template_behaviour:"
 msgid "Remove"
 msgstr "Remplacer"
 
@@ -4556,7 +4556,7 @@ msgctxt "view:ins_product.clause:"
 msgid "Clause"
 msgstr "Clause"
 
-msgctxt "view:ins_product.clause_rule:"
+msgctxt "view:clause.rule:"
 msgid "Clause rule"
 msgstr "Clause"
 
