--- a/modules/insurance_product/locale/fr_FR.po
+++ b/modules/insurance_product/locale/fr_FR.po
@@ -845,47 +845,47 @@ msgctxt "field:offered.coverage_amount.rule,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:ins_product.deductible_duration,create_date:"
+msgctxt "field:offered.deductible.rule.duration,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:ins_product.deductible_duration,create_date_:"
+msgctxt "field:offered.deductible.rule.duration,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:ins_product.deductible_duration,create_uid:"
+msgctxt "field:offered.deductible.rule.duration,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:ins_product.deductible_duration,deductible_rule:"
+msgctxt "field:offered.deductible.rule.duration,deductible_rule:"
 msgid "Deductible Rule"
 msgstr "Franchise"
 
-msgctxt "field:ins_product.deductible_duration,duration:"
+msgctxt "field:offered.deductible.rule.duration,duration:"
 msgid "Duration"
 msgstr "Durée"
 
-msgctxt "field:ins_product.deductible_duration,duration_unit:"
+msgctxt "field:offered.deductible.rule.duration,duration_unit:"
 msgid "Duration Unit"
 msgstr "Unité de la Durée"
 
-msgctxt "field:ins_product.deductible_duration,id:"
+msgctxt "field:offered.deductible.rule.duration,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:ins_product.deductible_duration,must_expand_tree:"
+msgctxt "field:offered.deductible.rule.duration,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
-msgctxt "field:ins_product.deductible_duration,rec_name:"
+msgctxt "field:offered.deductible.rule.duration,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.deductible_duration,write_date:"
+msgctxt "field:offered.deductible.rule.duration,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:ins_product.deductible_duration,write_uid:"
+msgctxt "field:offered.deductible.rule.duration,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -3308,7 +3308,7 @@ msgctxt "model:offered.coverage_amount.rule,name:"
 msgid "Coverage Amount Rule"
 msgstr "Montant de Couverture"
 
-msgctxt "model:ins_product.deductible_duration,name:"
+msgctxt "model:offered.deductible.rule.duration,name:"
 msgid "Deductible Duration"
 msgstr "Franchise"
 
@@ -3860,31 +3860,31 @@ msgctxt "selection:offered.coverage_amount.rule,template_behaviour:"
 msgid "Remove"
 msgstr "Remplacer"
 
-msgctxt "selection:ins_product.deductible_duration,duration_unit:"
+msgctxt "selection:offered.deductible.rule.duration,duration_unit:"
 msgid ""
 msgstr " "
 
-msgctxt "selection:ins_product.deductible_duration,duration_unit:"
+msgctxt "selection:offered.deductible.rule.duration,duration_unit:"
 msgid "Day"
 msgstr "Jour"
 
-msgctxt "selection:ins_product.deductible_duration,duration_unit:"
+msgctxt "selection:offered.deductible.rule.duration,duration_unit:"
 msgid "Half-year"
 msgstr "Semestre"
 
-msgctxt "selection:ins_product.deductible_duration,duration_unit:"
+msgctxt "selection:offered.deductible.rule.duration,duration_unit:"
 msgid "Month"
 msgstr "Mois"
 
-msgctxt "selection:ins_product.deductible_duration,duration_unit:"
+msgctxt "selection:offered.deductible.rule.duration,duration_unit:"
 msgid "Quarter"
 msgstr "Trimestre"
 
-msgctxt "selection:ins_product.deductible_duration,duration_unit:"
+msgctxt "selection:offered.deductible.rule.duration,duration_unit:"
 msgid "Week"
 msgstr "Semaine"
 
-msgctxt "selection:ins_product.deductible_duration,duration_unit:"
+msgctxt "selection:offered.deductible.rule.duration,duration_unit:"
 msgid "Year"
 msgstr "Année"
 
@@ -4572,7 +4572,7 @@ msgctxt "view:offered.coverage_amount.rule:"
 msgid "Coverage Amount rule"
 msgstr "Montant de Couverture"
 
-msgctxt "view:ins_product.deductible_duration:"
+msgctxt "view:offered.deductible.rule.duration:"
 msgid "Deductible Duration"
 msgstr "Franchise"
 
