--- a/modules/insurance_product/locale/fr_FR.po
+++ b/modules/insurance_product/locale/fr_FR.po
@@ -22,11 +22,11 @@ msgctxt "error:clause.rule:"
 msgid "You can not have 2 business rules that overlaps!"
 msgstr "2 règles se chevauchent!"
 
-msgctxt "error:ins_product.coverage_amount_rule:"
+msgctxt "error:offered.coverage_amount.rule:"
 msgid "Amounts need to be floats !"
 msgstr "Les montants doivent être des numériques !"
 
-msgctxt "error:ins_product.coverage_amount_rule:"
+msgctxt "error:offered.coverage_amount.rule:"
 msgid "You can not have 2 business rules that overlaps!"
 msgstr "2 règles se chevauchent!"
 
@@ -753,95 +753,95 @@ msgctxt "field:ins_product.clause_version,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:ins_product.coverage_amount_rule,amount_end:"
+msgctxt "field:offered.coverage_amount.rule,amount_end:"
 msgid "To"
 msgstr "À"
 
-msgctxt "field:ins_product.coverage_amount_rule,amount_start:"
+msgctxt "field:offered.coverage_amount.rule,amount_start:"
 msgid "From"
 msgstr "De"
 
-msgctxt "field:ins_product.coverage_amount_rule,amount_step:"
+msgctxt "field:offered.coverage_amount.rule,amount_step:"
 msgid "Step"
 msgstr "Pas"
 
-msgctxt "field:ins_product.coverage_amount_rule,amounts:"
+msgctxt "field:offered.coverage_amount.rule,amounts:"
 msgid "Amounts"
 msgstr "Montant"
 
-msgctxt "field:ins_product.coverage_amount_rule,config_kind:"
+msgctxt "field:offered.coverage_amount.rule,config_kind:"
 msgid "Conf. kind"
 msgstr "Type de Conf."
 
-msgctxt "field:ins_product.coverage_amount_rule,create_date:"
+msgctxt "field:offered.coverage_amount.rule,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:ins_product.coverage_amount_rule,create_date_:"
+msgctxt "field:offered.coverage_amount.rule,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:ins_product.coverage_amount_rule,create_uid:"
+msgctxt "field:offered.coverage_amount.rule,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:ins_product.coverage_amount_rule,end_date:"
+msgctxt "field:offered.coverage_amount.rule,end_date:"
 msgid "To Date"
 msgstr "Date de Fin"
 
-msgctxt "field:ins_product.coverage_amount_rule,id:"
+msgctxt "field:offered.coverage_amount.rule,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:ins_product.coverage_amount_rule,kind:"
+msgctxt "field:offered.coverage_amount.rule,kind:"
 msgid "Kind"
 msgstr "Type"
 
-msgctxt "field:ins_product.coverage_amount_rule,must_expand_tree:"
+msgctxt "field:offered.coverage_amount.rule,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
-msgctxt "field:ins_product.coverage_amount_rule,offered:"
+msgctxt "field:offered.coverage_amount.rule,offered:"
 msgid "Offered"
 msgstr "Offre"
 
-msgctxt "field:ins_product.coverage_amount_rule,other_coverage:"
+msgctxt "field:offered.coverage_amount.rule,other_coverage:"
 msgid "Source Coverage"
 msgstr "Garantie d'origine"
 
-msgctxt "field:ins_product.coverage_amount_rule,rec_name:"
+msgctxt "field:offered.coverage_amount.rule,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.coverage_amount_rule,rule:"
+msgctxt "field:offered.coverage_amount.rule,rule:"
 msgid "Rule Engine"
 msgstr "Moteur de Règle"
 
-msgctxt "field:ins_product.coverage_amount_rule,rule_complementary_data:"
+msgctxt "field:offered.coverage_amount.rule,rule_complementary_data:"
 msgid "Rule Complementary Data"
 msgstr "Paramètres de Rêgle"
 
-msgctxt "field:ins_product.coverage_amount_rule,start_date:"
+msgctxt "field:offered.coverage_amount.rule,start_date:"
 msgid "From Date"
 msgstr "Date de Début"
 
-msgctxt "field:ins_product.coverage_amount_rule,template:"
+msgctxt "field:offered.coverage_amount.rule,template:"
 msgid "Template"
 msgstr "Modèle"
 
-msgctxt "field:ins_product.coverage_amount_rule,template_behaviour:"
+msgctxt "field:offered.coverage_amount.rule,template_behaviour:"
 msgid "Template Behaviour"
 msgstr "Comportement du Modèle"
 
-msgctxt "field:ins_product.coverage_amount_rule,view_rec_name:"
+msgctxt "field:offered.coverage_amount.rule,view_rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.coverage_amount_rule,write_date:"
+msgctxt "field:offered.coverage_amount.rule,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:ins_product.coverage_amount_rule,write_uid:"
+msgctxt "field:offered.coverage_amount.rule,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -3252,7 +3252,7 @@ msgctxt "help:benefit.rule,use_monthly_period:"
 msgid "Split periods at the end of the month"
 msgstr "Découper les périodes à la fin du mois"
 
-msgctxt "help:ins_product.coverage_amount_rule,amounts:"
+msgctxt "help:offered.coverage_amount.rule,amounts:"
 msgid "Specify amounts separated by ;"
 msgstr "Spécifier les montants séparés par des ;"
 
@@ -3304,7 +3304,7 @@ msgctxt "model:ins_product.clause_version,name:"
 msgid "Clause Version"
 msgstr "Version de Clause"
 
-msgctxt "model:ins_product.coverage_amount_rule,name:"
+msgctxt "model:offered.coverage_amount.rule,name:"
 msgid "Coverage Amount Rule"
 msgstr "Montant de Couverture"
 
@@ -3816,47 +3816,47 @@ msgctxt "selection:clause.rule,template_behaviour:"
 msgid "Remove"
 msgstr "Remplacer"
 
-msgctxt "selection:ins_product.coverage_amount_rule,config_kind:"
+msgctxt "selection:offered.coverage_amount.rule,config_kind:"
 msgid "Advanced"
 msgstr "Avancé"
 
-msgctxt "selection:ins_product.coverage_amount_rule,config_kind:"
+msgctxt "selection:offered.coverage_amount.rule,config_kind:"
 msgid "Simple"
 msgstr "Simple"
 
-msgctxt "selection:ins_product.coverage_amount_rule,kind:"
+msgctxt "selection:offered.coverage_amount.rule,kind:"
 msgid "Amount"
 msgstr "Montant"
 
-msgctxt "selection:ins_product.coverage_amount_rule,kind:"
+msgctxt "selection:offered.coverage_amount.rule,kind:"
 msgid "Calculated List"
 msgstr "Liste Calculé"
 
-msgctxt "selection:ins_product.coverage_amount_rule,kind:"
+msgctxt "selection:offered.coverage_amount.rule,kind:"
 msgid "From another Coverage"
 msgstr "A partir d'une autre garantie"
 
-msgctxt "selection:ins_product.coverage_amount_rule,offered:"
+msgctxt "selection:offered.coverage_amount.rule,offered:"
 msgid "Benefit"
 msgstr "Prestation"
 
-msgctxt "selection:ins_product.coverage_amount_rule,offered:"
+msgctxt "selection:offered.coverage_amount.rule,offered:"
 msgid "Coverage"
 msgstr "Garantie"
 
-msgctxt "selection:ins_product.coverage_amount_rule,offered:"
+msgctxt "selection:offered.coverage_amount.rule,offered:"
 msgid "Product"
 msgstr "Produit"
 
-msgctxt "selection:ins_product.coverage_amount_rule,template_behaviour:"
+msgctxt "selection:offered.coverage_amount.rule,template_behaviour:"
 msgid ""
 msgstr " "
 
-msgctxt "selection:ins_product.coverage_amount_rule,template_behaviour:"
+msgctxt "selection:offered.coverage_amount.rule,template_behaviour:"
 msgid "Add"
 msgstr "Compléter"
 
-msgctxt "selection:ins_product.coverage_amount_rule,template_behaviour:"
+msgctxt "selection:offered.coverage_amount.rule,template_behaviour:"
 msgid "Remove"
 msgstr "Remplacer"
 
@@ -4568,7 +4568,7 @@ msgctxt "view:ins_product.clause_version:"
 msgid "Clause rule"
 msgstr "Clause"
 
-msgctxt "view:ins_product.coverage_amount_rule:"
+msgctxt "view:offered.coverage_amount.rule:"
 msgid "Coverage Amount rule"
 msgstr "Montant de Couverture"
 
