--- a/modules/insurance_product/locale/fr_FR.po
+++ b/modules/insurance_product/locale/fr_FR.po
@@ -30,7 +30,7 @@ msgctxt "error:offered.coverage_amount.rule:"
 msgid "You can not have 2 business rules that overlaps!"
 msgstr "2 règles se chevauchent!"
 
-msgctxt "error:ins_product.deductible_rule:"
+msgctxt "error:offered.deductible.rule:"
 msgid "You can not have 2 business rules that overlaps!"
 msgstr "2 règles se chevauchent!"
 
@@ -889,99 +889,99 @@ msgctxt "field:offered.deductible.rule.duration,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:ins_product.deductible_rule,amount:"
+msgctxt "field:offered.deductible.rule,amount:"
 msgid "Amount"
 msgstr "Montant"
 
-msgctxt "field:ins_product.deductible_rule,config_kind:"
+msgctxt "field:offered.deductible.rule,config_kind:"
 msgid "Conf. kind"
 msgstr "Type de Conf."
 
-msgctxt "field:ins_product.deductible_rule,create_date:"
+msgctxt "field:offered.deductible.rule,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:ins_product.deductible_rule,create_date_:"
+msgctxt "field:offered.deductible.rule,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:ins_product.deductible_rule,create_uid:"
+msgctxt "field:offered.deductible.rule,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:ins_product.deductible_rule,duration:"
+msgctxt "field:offered.deductible.rule,duration:"
 msgid "Duration"
 msgstr "Durée"
 
-msgctxt "field:ins_product.deductible_rule,duration_unit:"
+msgctxt "field:offered.deductible.rule,duration_unit:"
 msgid "Duration Unit"
 msgstr "Unité de la Durée"
 
-msgctxt "field:ins_product.deductible_rule,durations:"
+msgctxt "field:offered.deductible.rule,durations:"
 msgid "Durations"
 msgstr "Durées"
 
-msgctxt "field:ins_product.deductible_rule,end_date:"
+msgctxt "field:offered.deductible.rule,end_date:"
 msgid "To Date"
 msgstr "Date de Fin"
 
-msgctxt "field:ins_product.deductible_rule,id:"
+msgctxt "field:offered.deductible.rule,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:ins_product.deductible_rule,kind:"
+msgctxt "field:offered.deductible.rule,kind:"
 msgid "Kind"
 msgstr "Type"
 
-msgctxt "field:ins_product.deductible_rule,must_expand_tree:"
+msgctxt "field:offered.deductible.rule,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
-msgctxt "field:ins_product.deductible_rule,offered:"
+msgctxt "field:offered.deductible.rule,offered:"
 msgid "Offered"
 msgstr "Offre"
 
-msgctxt "field:ins_product.deductible_rule,rec_name:"
+msgctxt "field:offered.deductible.rule,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.deductible_rule,rule:"
+msgctxt "field:offered.deductible.rule,rule:"
 msgid "Rule Engine"
 msgstr "Moteur de Règle"
 
-msgctxt "field:ins_product.deductible_rule,rule_complementary_data:"
+msgctxt "field:offered.deductible.rule,rule_complementary_data:"
 msgid "Rule Complementary Data"
 msgstr "Paramètres de Rêgle"
 
-msgctxt "field:ins_product.deductible_rule,scope:"
+msgctxt "field:offered.deductible.rule,scope:"
 msgid "Scope"
 msgstr ""
 
-msgctxt "field:ins_product.deductible_rule,simple_config_choice:"
+msgctxt "field:offered.deductible.rule,simple_config_choice:"
 msgid "Simple Config. Choice"
 msgstr "Choix de Config. Simple"
 
-msgctxt "field:ins_product.deductible_rule,start_date:"
+msgctxt "field:offered.deductible.rule,start_date:"
 msgid "From Date"
 msgstr "Date de Début"
 
-msgctxt "field:ins_product.deductible_rule,template:"
+msgctxt "field:offered.deductible.rule,template:"
 msgid "Template"
 msgstr "Modèle"
 
-msgctxt "field:ins_product.deductible_rule,template_behaviour:"
+msgctxt "field:offered.deductible.rule,template_behaviour:"
 msgid "Template Behaviour"
 msgstr "Comportement du Modèle"
 
-msgctxt "field:ins_product.deductible_rule,view_rec_name:"
+msgctxt "field:offered.deductible.rule,view_rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.deductible_rule,write_date:"
+msgctxt "field:offered.deductible.rule,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:ins_product.deductible_rule,write_uid:"
+msgctxt "field:offered.deductible.rule,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -3312,7 +3312,7 @@ msgctxt "model:offered.deductible.rule.duration,name:"
 msgid "Deductible Duration"
 msgstr "Franchise"
 
-msgctxt "model:ins_product.deductible_rule,name:"
+msgctxt "model:offered.deductible.rule,name:"
 msgid "Deductible Rule"
 msgstr "Franchise"
 
@@ -3888,87 +3888,87 @@ msgctxt "selection:offered.deductible.rule.duration,duration_unit:"
 msgid "Year"
 msgstr "Année"
 
-msgctxt "selection:ins_product.deductible_rule,config_kind:"
+msgctxt "selection:offered.deductible.rule,config_kind:"
 msgid "Advanced"
 msgstr "Avancé"
 
-msgctxt "selection:ins_product.deductible_rule,config_kind:"
+msgctxt "selection:offered.deductible.rule,config_kind:"
 msgid "Simple"
 msgstr "Simple"
 
-msgctxt "selection:ins_product.deductible_rule,duration_unit:"
+msgctxt "selection:offered.deductible.rule,duration_unit:"
 msgid ""
 msgstr " "
 
-msgctxt "selection:ins_product.deductible_rule,duration_unit:"
+msgctxt "selection:offered.deductible.rule,duration_unit:"
 msgid "Day"
 msgstr "Jour"
 
-msgctxt "selection:ins_product.deductible_rule,duration_unit:"
+msgctxt "selection:offered.deductible.rule,duration_unit:"
 msgid "Half-year"
 msgstr "Semestre"
 
-msgctxt "selection:ins_product.deductible_rule,duration_unit:"
+msgctxt "selection:offered.deductible.rule,duration_unit:"
 msgid "Month"
 msgstr "Mois"
 
-msgctxt "selection:ins_product.deductible_rule,duration_unit:"
+msgctxt "selection:offered.deductible.rule,duration_unit:"
 msgid "Quarter"
 msgstr "Trimestre"
 
-msgctxt "selection:ins_product.deductible_rule,duration_unit:"
+msgctxt "selection:offered.deductible.rule,duration_unit:"
 msgid "Week"
 msgstr "Semaine"
 
-msgctxt "selection:ins_product.deductible_rule,duration_unit:"
+msgctxt "selection:offered.deductible.rule,duration_unit:"
 msgid "Year"
 msgstr "Année"
 
-msgctxt "selection:ins_product.deductible_rule,kind:"
+msgctxt "selection:offered.deductible.rule,kind:"
 msgid "Amount"
 msgstr "Montant"
 
-msgctxt "selection:ins_product.deductible_rule,kind:"
+msgctxt "selection:offered.deductible.rule,kind:"
 msgid "Duration"
 msgstr "Durée"
 
-msgctxt "selection:ins_product.deductible_rule,offered:"
+msgctxt "selection:offered.deductible.rule,offered:"
 msgid "Benefit"
 msgstr "Prestation"
 
-msgctxt "selection:ins_product.deductible_rule,offered:"
+msgctxt "selection:offered.deductible.rule,offered:"
 msgid "Coverage"
 msgstr "Garantie"
 
-msgctxt "selection:ins_product.deductible_rule,offered:"
+msgctxt "selection:offered.deductible.rule,offered:"
 msgid "Product"
 msgstr "Produit"
 
-msgctxt "selection:ins_product.deductible_rule,scope:"
+msgctxt "selection:offered.deductible.rule,scope:"
 msgid "Coverage"
 msgstr "Offre"
 
-msgctxt "selection:ins_product.deductible_rule,scope:"
+msgctxt "selection:offered.deductible.rule,scope:"
 msgid "Covered Element"
 msgstr "Elément Couvert"
 
-msgctxt "selection:ins_product.deductible_rule,simple_config_choice:"
+msgctxt "selection:offered.deductible.rule,simple_config_choice:"
 msgid "List"
 msgstr ""
 
-msgctxt "selection:ins_product.deductible_rule,simple_config_choice:"
+msgctxt "selection:offered.deductible.rule,simple_config_choice:"
 msgid "Value"
 msgstr "Valeur"
 
-msgctxt "selection:ins_product.deductible_rule,template_behaviour:"
+msgctxt "selection:offered.deductible.rule,template_behaviour:"
 msgid ""
 msgstr " "
 
-msgctxt "selection:ins_product.deductible_rule,template_behaviour:"
+msgctxt "selection:offered.deductible.rule,template_behaviour:"
 msgid "Add"
 msgstr "Compléter"
 
-msgctxt "selection:ins_product.deductible_rule,template_behaviour:"
+msgctxt "selection:offered.deductible.rule,template_behaviour:"
 msgid "Remove"
 msgstr "Remplacer"
 
@@ -4576,7 +4576,7 @@ msgctxt "view:offered.deductible.rule.duration:"
 msgid "Deductible Duration"
 msgstr "Franchise"
 
-msgctxt "view:ins_product.deductible_rule:"
+msgctxt "view:offered.deductible.rule:"
 msgid "Deductible rule"
 msgstr "Franchise"
 
