--- a/modules/insurance_contract/locale/fr_FR.po
+++ b/modules/insurance_contract/locale/fr_FR.po
@@ -1009,7 +1009,7 @@ msgctxt "selection:document.request.line,for_object:"
 msgid "Option"
 msgstr "Garantie"
 
-msgctxt "selection:ins_product.document_request,needed_by:"
+msgctxt "selection:document.request,needed_by:"
 msgid "Contract"
 msgstr "Contrat"
 
