--- a/modules/insurance_product/locale/fr_FR.po
+++ b/modules/insurance_product/locale/fr_FR.po
@@ -1133,55 +1133,55 @@ msgctxt "field:document.description,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:ins_product.document_request,create_date:"
+msgctxt "field:document.request,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:ins_product.document_request,create_date_:"
+msgctxt "field:document.request,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:ins_product.document_request,create_uid:"
+msgctxt "field:document.request,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:ins_product.document_request,documents:"
+msgctxt "field:document.request,documents:"
 msgid "Documents"
 msgstr "Documents"
 
-msgctxt "field:ins_product.document_request,id:"
+msgctxt "field:document.request,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:ins_product.document_request,is_complete:"
+msgctxt "field:document.request,is_complete:"
 msgid "Is Complete"
 msgstr "Tout reçu"
 
-msgctxt "field:ins_product.document_request,must_expand_tree:"
+msgctxt "field:document.request,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
-msgctxt "field:ins_product.document_request,needed_by:"
+msgctxt "field:document.request,needed_by:"
 msgid "Requested for"
 msgstr "Nécessaire Pour"
 
-msgctxt "field:ins_product.document_request,needed_by_str:"
+msgctxt "field:document.request,needed_by_str:"
 msgid "Master as String"
 msgstr ""
 
-msgctxt "field:ins_product.document_request,rec_name:"
+msgctxt "field:document.request,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.document_request,request_description:"
+msgctxt "field:document.request,request_description:"
 msgid "Request Description"
 msgstr "Description de la Demande"
 
-msgctxt "field:ins_product.document_request,write_date:"
+msgctxt "field:document.request,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:ins_product.document_request,write_uid:"
+msgctxt "field:document.request,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -3328,7 +3328,7 @@ msgctxt "model:document.description,name:"
 msgid "Document Descriptor"
 msgstr "Descripteur de Document"
 
-msgctxt "model:ins_product.document_request,name:"
+msgctxt "model:document.request,name:"
 msgid "Document Request"
 msgstr "Demande de Documents"
 
@@ -3976,7 +3976,7 @@ msgctxt "selection:document.request.line,for_object:"
 msgid ""
 msgstr " "
 
-msgctxt "selection:ins_product.document_request,needed_by:"
+msgctxt "selection:document.request,needed_by:"
 msgid ""
 msgstr " "
 
@@ -4596,15 +4596,15 @@ msgctxt "view:document.description:"
 msgid "Documents"
 msgstr "Documents"
 
-msgctxt "view:ins_product.document_request:"
+msgctxt "view:document.request:"
 msgid "Document Request"
 msgstr "Demande de Documents"
 
-msgctxt "view:ins_product.document_request:"
+msgctxt "view:document.request:"
 msgid "Requests"
 msgstr "Demandes"
 
-msgctxt "view:ins_product.document_request:"
+msgctxt "view:document.request:"
 msgid "Send Request"
 msgstr "Envoyer la demande"
 
