--- a/modules/insurance_product/locale/fr_FR.po
+++ b/modules/insurance_product/locale/fr_FR.po
@@ -1662,55 +1662,55 @@ msgctxt "field:ins_product.item_desc-sub_item_desc,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:ins_product.letter_model,code:"
+msgctxt "field:document.template,code:"
 msgid "Code"
 msgstr "Code"
 
-msgctxt "field:ins_product.letter_model,create_date:"
+msgctxt "field:document.template,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:ins_product.letter_model,create_date_:"
+msgctxt "field:document.template,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:ins_product.letter_model,create_uid:"
+msgctxt "field:document.template,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:ins_product.letter_model,id:"
+msgctxt "field:document.template,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:ins_product.letter_model,kind:"
+msgctxt "field:document.template,kind:"
 msgid "name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.letter_model,must_expand_tree:"
+msgctxt "field:document.template,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
-msgctxt "field:ins_product.letter_model,name:"
+msgctxt "field:document.template,name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.letter_model,on_model:"
+msgctxt "field:document.template,on_model:"
 msgid "Model"
 msgstr "Modèle"
 
-msgctxt "field:ins_product.letter_model,rec_name:"
+msgctxt "field:document.template,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.letter_model,versions:"
+msgctxt "field:document.template,versions:"
 msgid "Versions"
 msgstr "Versions"
 
-msgctxt "field:ins_product.letter_model,write_date:"
+msgctxt "field:document.template,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:ins_product.letter_model,write_uid:"
+msgctxt "field:document.template,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -3377,7 +3377,7 @@ msgctxt "model:ins_product.item_desc-sub_item_desc,name:"
 msgid "Relation between Item Desc and Sub Item Desc"
 msgstr ""
 
-msgctxt "model:ins_product.letter_model,name:"
+msgctxt "model:document.template,name:"
 msgid "Letter Model"
 msgstr "Modèle de Lettre"
 
@@ -4096,11 +4096,11 @@ msgctxt "selection:ins_product.expense_kind,kind:"
 msgid "Other"
 msgstr "Autre"
 
-msgctxt "selection:ins_product.letter_model,kind:"
+msgctxt "selection:document.template,kind:"
 msgid ""
 msgstr " "
 
-msgctxt "selection:ins_product.letter_model,kind:"
+msgctxt "selection:document.template,kind:"
 msgid "Document Request"
 msgstr "Demande de Documents"
 
@@ -4632,11 +4632,11 @@ msgctxt "view:ins_product.expense_kind:"
 msgid "Expense Kind"
 msgstr "Type de Frais"
 
-msgctxt "view:ins_product.letter_model:"
+msgctxt "view:document.template:"
 msgid "Letter Model"
 msgstr "Modèle de Lettre"
 
-msgctxt "view:ins_product.letter_model:"
+msgctxt "view:document.template:"
 msgid "Letter Models"
 msgstr "Modèles de Lettre"
 
